add config for production

--- a/apps/frontend-pwa/.env.production
+++ b/apps/frontend-pwa/.env.production
@@ -1,5 +1,5 @@
 COOKIE_DOMAIN=.klicker.xeno-isenegger.ch
-API_DOMAIN=backend-sls$COOKIE_DOMAIN
+API_DOMAIN=api$COOKIE_DOMAIN
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
 NEXT_PUBLIC_IMAGE_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/img"
