--- a/apps/frontend-control/.env.production
+++ b/apps/frontend-control/.env.production
@@ -1,5 +1,5 @@
 COOKIE_DOMAIN=.klicker.xeno-isenegger.ch
-API_DOMAIN=backend-sls$COOKIE_DOMAIN
+API_DOMAIN=api$COOKIE_DOMAIN
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
 NEXT_PUBLIC_API_URL="http://$API_DOMAIN/api/graphql"
