--- a/.github/workflows/v3_frontend-control-docker-prod.yml
+++ b/.github/workflows/v3_frontend-control-docker-prod.yml
@@ -3,8 +3,7 @@ name: Build Docker image for frontend-control (Production)
 on:
   push:
     tags: ['v*.*.*']
-    branches:
-      - 'switch*'
+    branches: ['v3', 'v3*', 'switch*']
     paths:
       - 'apps/frontend-control/**'
       - '.github/workflows/v3_frontend-control**'
