--- a/apps/auth/.env.test
+++ b/apps/auth/.env.test
@@ -4,6 +4,6 @@ EDUID_CLIENT_ID=uzh_klicker_auth_dev
 EDUID_WELL_KNOWN=https://login.test.eduid.ch/.well-known/openid-configuration
 NEXT_PUBLIC_EDUID_ID=eduid-test
 NEXT_PUBLIC_DEFAULT_REDIRECT=http://127.0.0.1:3002
-DATABASE_URL=postgres://klicker:klicker@localhost:5432/klicker
+DATABASE_URL=postgres://klicker:klicker@localhost:5432/klicker-prod
 APP_SECRET=abcd
 NEXT_PUBLIC_AUTH_URL=http://127.0.0.1:3010
