chore(apps/backend-docker): add initial script for inconsistent redis entries of non-running sessions

--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -81,7 +81,8 @@
     "format:check": "prettier --check .",
     "start": "node -r dotenv/config dist/index.js",
     "start:test": "nyc --silent node -r dotenv/config dist/index.js",
-    "exec:prod": "doppler run --config prd -- bun run"
+    "script": "doppler run --config dev -- bun run",
+    "script:prod": "doppler run --config prd -- bun run"
   },
   "engines": {
     "node": "=20"
