chore(ci): trigger backend-docker build on changes to graphql and prisma packages

--- a/.github/workflows/v3_backend-docker.yml
+++ b/.github/workflows/v3_backend-docker.yml
@@ -9,11 +9,15 @@ on:
       - 'CI'
     paths:
       - 'apps/backend-docker/**'
+      - 'packages/graphql/**'
+      - 'packages/prisma/**'
       - '.github/workflows/v3_backend-docker**'
   pull_request:
     # branches: [ "v3" ]
     paths:
       - 'apps/backend-docker/**'
+      - 'packages/graphql/**'
+      - 'packages/prisma/**'
       - '.github/workflows/v3_backend-docker**'
 
 env:
