add basic group activity form and resizeable on question pool

--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -44,6 +44,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
     "react-qrcode-logo": "2.9.0",
+    "react-resizable-panels": "2.0.12",
     "react-select": "5.7.4",
     "react-sizeme": "3.0.2",
     "react-tagcloud": "2.3.1",
