chore: implement first group challenge for BF2

--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -11,7 +11,8 @@
     "@klicker-uzh/util": "workspace:*"
   },
   "dependencies": {
-    "@prisma/client": "5.9.1"
+    "@prisma/client": "5.9.1",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
     "@pothos/plugin-prisma": "3.60.0",
@@ -78,6 +79,7 @@
     "script:prod": "ENV=production doppler run --config prd -- bun run",
     "seed": "ENV=development doppler run --config dev -- run-s build seed:test",
     "seed:achievements": "ENV=development doppler run --config dev bun run src/data/seedAchievements.ts",
+    "seed:bf2": "ENV=development doppler run --config dev bun run src/data/seedBF2.ts",
     "seed:groupActivityResults": "ENV=development doppler run --config dev -- bun run src/data/seedGroupActivityResults.ts",
     "seed:prod:achievements": "ENV=production doppler run --config prd -- bun run src/data/seedAchievements.ts",
     "seed:flashcards": "ENV=development doppler run --config dev bun run src/data/seedFlashcards.ts",
