--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - 8088:80
       - 8080:8080
     volumes:
-      - './util/traefik/rules.yaml:/etc/traefik/rules.yaml'
+      - "./util/traefik/rules.yaml:/etc/traefik/rules.yaml"
     networks:
       - klicker
 
@@ -27,17 +27,17 @@ services:
       - 80:80
       - 8080:8080
     volumes:
-      - './util/traefik/rules_docker.yaml:/etc/traefik/rules.yaml'
+      - "./util/traefik/rules_docker.yaml:/etc/traefik/rules.yaml"
     networks:
       - klicker
 
   auth:
     profiles:
       - full
-    image: ghcr.io/uzh-bf/klicker-uzh/auth:v3.1-dev
+    image: ghcr.io/uzh-bf/klicker-uzh/auth:v3
     environment:
       APP_SECRET: abcd
-      DATABASE_URL: 'postgres://klicker:klicker@postgres:5432/main'
+      DATABASE_URL: "postgres://klicker:klicker@postgres:5432/main"
       # EDUID_CLIENT_SECRET: ''
       # TEAMS_WEBHOOK_URL: ''
     ports:
@@ -48,7 +48,7 @@ services:
   frontend_pwa:
     profiles:
       - full
-    image: ghcr.io/uzh-bf/klicker-uzh/frontend-pwa:v3.1-dev
+    image: ghcr.io/uzh-bf/klicker-uzh/frontend-pwa:v3
     environment:
       APP_SECRET: abcd
     ports:
@@ -59,7 +59,7 @@ services:
   frontend_manage:
     profiles:
       - full
-    image: ghcr.io/uzh-bf/klicker-uzh/frontend-manage:v3.1-dev
+    image: ghcr.io/uzh-bf/klicker-uzh/frontend-manage:v3
     ports:
       - 3002:3000
     networks:
@@ -68,7 +68,7 @@ services:
   frontend_control:
     profiles:
       - full
-    image: ghcr.io/uzh-bf/klicker-uzh/frontend-control:v3.1-dev
+    image: ghcr.io/uzh-bf/klicker-uzh/frontend-control:v3
     ports:
       - 3003:3000
     networks:
@@ -77,19 +77,19 @@ services:
   backend:
     profiles:
       - full
-    image: ghcr.io/uzh-bf/klicker-uzh/backend-docker:v3.1-dev
+    image: ghcr.io/uzh-bf/klicker-uzh/backend-docker:v3
     environment:
-      APP_SECRET: 'abcd'
+      APP_SECRET: "abcd"
       COOKIE_DOMAIN: .klicker.com
-      CRON_TOKEN: 'abcd'
-      DATABASE_URL: 'postgres://klicker:klicker@postgres:5432/klicker'
-      NOTIFICATION_SUPPORT_MAIL: 'noone@klicker.com'
-      NOTIFICATION_URL: 'noone@klicker.com'
-      REDIS_CACHE_HOST: 'redis_cache'
-      REDIS_CACHE_PASS: ''
+      CRON_TOKEN: "abcd"
+      DATABASE_URL: "postgres://klicker:klicker@postgres:5432/klicker"
+      NOTIFICATION_SUPPORT_MAIL: "noone@klicker.com"
+      NOTIFICATION_URL: "noone@klicker.com"
+      REDIS_CACHE_HOST: "redis_cache"
+      REDIS_CACHE_PASS: ""
       REDIS_CACHE_PORT: 6379
-      REDIS_HOST: 'redis_exec'
-      REDIS_PASS: ''
+      REDIS_HOST: "redis_exec"
+      REDIS_PASS: ""
       REDIS_PORT: 6379
       # BLOB_STORAGE_ACCESS_KEY: ''
       # BLOB_STORAGE_ACCOUNT_NAME: ''
@@ -164,7 +164,7 @@ services:
       - ./util/listmonk-config.toml:/listmonk/config.toml
     networks:
       - klicker
-    command: [sh, -c, 'yes | ./listmonk --install && ./listmonk']
+    command: [sh, -c, "yes | ./listmonk --install && ./listmonk"]
 
   listmonk_db:
     image: docker.io/library/postgres:13
@@ -177,7 +177,7 @@ services:
     networks:
       - klicker
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U listmonk']
+      test: ["CMD-SHELL", "pg_isready -U listmonk"]
       interval: 10s
       timeout: 5s
       retries: 6
