--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -91,7 +91,7 @@
     "lint": "next lint",
     "pushTest": "node src/testPush.js",
     "start": "next start --port 3001",
-    "start:test": "cross-env NODE_ENV=test pnpm start"
+    "start:test": "cross-env NODE_ENV=test next dev --port 3001"
   },
   "engines": {
     "node": "=20"
