--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -72,6 +72,7 @@
     "check": "tsc --noEmit",
     "dev": "cross-env NODE_ENV=development next dev --port 3003",
     "dev:offline": "cross-env NODE_ENV=development next dev --port 3003",
+    "dev:test": "cross-env NODE_ENV=test next dev --port 3003",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "next lint",
