--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -90,6 +90,7 @@
     "check": "tsc --noEmit",
     "dev": "cross-env NODE_ENV=development next dev --port 3002",
     "dev:offline": "cross-env NODE_ENV=development next dev --port 3002",
+    "dev:test": "cross-env NODE_ENV=test next dev --port 3002",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "next lint",
