--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dev:docs": "doppler run --config dev -- turbo run dev:docs",
     "dev:migration": "doppler run --config dev -- turbo run dev:migration",
     "dev:offline": "doppler run --config dev -- turbo run dev:offline",
+    "dev:test": "cross-env NODE_ENV=test turbo run dev:test",
     "format": "turbo run format --parallel --continue",
     "format:check": "turbo run format:check --parallel --continue",
     "lint": "turbo run lint --parallel --continue",
