--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -49,11 +49,13 @@
     "build:test": "cross-env NODE_ENV=test next build",
     "dev": "next dev --port 3010",
     "dev:offline": "next dev --port 3010",
+    "dev:test": "cross-env NODE_ENV=test next dev --port 3010",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "next lint",
     "start": "next start --port 3010",
     "start:test": "cross-env NODE_ENV=test next dev --port 3010"
+
   },
   "engines": {
     "node": "=20"
