--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -85,6 +85,7 @@
     "check": "tsc --noEmit",
     "dev": "cross-env NODE_ENV=development next dev --port 3001",
     "dev:offline": "cross-env NODE_ENV=development next dev --port 3001",
+    "dev:test": "cross-env NODE_ENV=test next dev --port 3001",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "generateAvatars": "ts-node --esm src/utils/generateAvatars.ts",
