--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -95,7 +95,7 @@
     "format:check": "prettier --check .",
     "lint": "next lint",
     "start": "next start --port 3002",
-    "start:test": "cross-env NODE_ENV=test next dev --port 3002"
+    "start:test": "cross-env NODE_ENV=test pnpm start"
   },
   "engines": {
     "node": "=20"
