--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -44,6 +44,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
     "react-qrcode-logo": "2.9.0",
+    "react-resizable-panels": "2.0.12",
     "react-select": "5.7.4",
     "react-sizeme": "3.0.2",
     "react-tagcloud": "2.3.1",
@@ -89,6 +90,7 @@
     "check": "tsc --noEmit",
     "dev": "cross-env NODE_ENV=development next dev --port 3002",
     "dev:offline": "cross-env NODE_ENV=development next dev --port 3002",
+    "dev:test": "cross-env NODE_ENV=test next dev --port 3002",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "next lint",
