--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -29,6 +29,7 @@
     "mathjs": "11.9.1",
     "mongodb": "5.7.0",
     "node-schedule": "2.1.1",
+    "object-hash": "3.0.0",
     "ramda": "0.29.0",
     "uuid": "9.0.0",
     "validator": "13.11.0",
@@ -56,6 +57,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.17.4",
     "@types/node-schedule": "^2.1.0",
+    "@types/object-hash": "^3.0.2",
     "@types/ramda": "^0.29.3",
     "@types/uuid": "^9.0.2",
     "@types/validator": "^13.9.0",
