--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -29,6 +29,7 @@
     "eslint": "8.45.0",
     "fs-extra": "11.1.1",
     "npm-run-all": "4.1.5",
+    "p-map": "7.0.2",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
     "prisma": "5.9.1",
