--- a/deploy/charts/klicker-uzh-v2/templates/cron-practice-quiz-publications.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cron-practice-quiz-publications.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ include "chart.fullname" . }}-cron-practice-quiz-publications
+  name: {{ include "chart.fullname" . }}-cron-practice-pubs
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
