--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -34,6 +34,7 @@
     "graphql": "16.7.1",
     "graphql-codegen-persisted-query-ids": "0.1.2",
     "graphql-ws": "5.13.1",
+    "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.1",
     "localforage": "1.10.0",
     "next": "14.1.0",
