--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -33,6 +33,8 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@uzh-bf/design-system": "2.5.2",
     "formik": "2.4.3",
+    "js-cookie": "3.0.5",
+    "localforage": "1.10.0",
     "next": "14.1.0",
     "next-intl": "3.5.4",
     "react": "18.2.0",
