--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -29,6 +29,7 @@
     "graphql-ws": "5.13.1",
     "html-to-image": "1.11.11",
     "is-hotkey": "0.2.0",
+    "js-cookie": "3.0.5",
     "js-search": "2.0.1",
     "localforage": "1.10.0",
     "lodash": "4.17.21",
@@ -61,6 +62,7 @@
     "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/typography": "0.5.9",
     "@types/d3": "^7.4.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/js-search": "^1.4.0",
     "@types/lodash": "^4.14.196",
     "@types/node": "^18.17.4",
