--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -56,6 +56,7 @@
     "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/typography": "0.5.9",
     "@types/body-parser": "^1.19.2",
+    "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.17.4",
     "@types/object-hash": "^3.0.2",
