--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -17,6 +17,7 @@
     "@klicker-uzh/shared-components": "workspace:*",
     "@sentry/nextjs": "7.61.1",
     "@socialgouv/matomo-next": "1.6.1",
+    "@types/js-cookie": "^3.0.3",
     "@uzh-bf/design-system": "2.5.2",
     "body-parser": "1.20.2",
     "cross-env": "7.0.3",
@@ -26,6 +27,7 @@
     "graphql": "16.7.1",
     "graphql-codegen-persisted-query-ids": "0.1.2",
     "graphql-ws": "5.13.1",
+    "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.1",
     "localforage": "1.10.0",
     "next": "14.1.0",
