--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -8,6 +8,7 @@
     "@klicker-uzh/markdown": "workspace:*",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.4",
+    "@types/js-cookie": "^3.0.3",
     "@tailwindcss/typography": "0.5.9",
     "@tsconfig/node18": "^2.0.1",
     "@tsconfig/recommended": "^1.0.2",
