chore: build all required packages manually before running checks

--- a/.github/workflows/check-types.yml
+++ b/.github/workflows/check-types.yml
@@ -22,49 +22,24 @@ jobs:
         with:
           version: 8.14.1
           run_install: true
-      - name: Build project
-        shell: bash
-        run: pnpm run build
-      - name: Check backend-docker typescript types
-        shell: bash
+      - name: Build all required packages
         run: |
-          cd apps/backend-docker
-          pnpm run check
-      - name: Check frontend-pwa typescript types
-        if: always() # Run this step even if the previous one fails
-        shell: bash
-        run: |
-          cd apps/frontend-pwa
-          pnpm run check
-      - name: Check frontend-manage typescript types
+          cd packages/prisma
+          pnpm run build
+          cd ../graphql
+          pnpm run build
+          cd ../markdown
+          pnpm run build
+          cd ../grading
+          pnpm run build
+          cd ../shared-components
+          pnpm run build
+
+      - name: Check prisma package typescript types
         if: always()
         shell: bash
         run: |
-          cd apps/frontend-manage
-          pnpm run check
-      - name: Check frontend-control typescript types
-        if: always()
-        shell: bash
-        run: |
-          cd apps/frontend-control
-          pnpm run check
-      - name: Check office-addin typescript types
-        if: always()
-        shell: bash
-        run: |
-          cd apps/office-addin
-          pnpm run check
-      - name: Check func-response-processor typescript types
-        if: always()
-        shell: bash
-        run: |
-          cd apps/func-response-processor
-          pnpm run check
-      - name: Check func-incoming-responses typescript types
-        if: always()
-        shell: bash
-        run: |
-          cd apps/func-incoming-responses
+          cd packages/prisma
           pnpm run check
       - name: Check graphql package typescript types
         if: always()
@@ -77,16 +52,59 @@ jobs:
         shell: bash
         run: |
           cd packages/lti
-          pnpm run check
-      - name: Check prisma package typescript types
-        if: always()
-        shell: bash
-        run: |
-          cd packages/prisma
+          pnpm run build
           pnpm run check
       - name: Check shared-components package typescript types
         if: always()
         shell: bash
         run: |
           cd packages/shared-components
+          pnpm run check
+      - name: Check backend-docker typescript types
+        shell: bash
+        run: |
+          cd apps/backend-docker
+          pnpm run build
+          pnpm run check
+      - name: Check frontend-pwa typescript types
+        if: always() # Run this step even if the previous one fails
+        shell: bash
+        run: |
+          cd apps/frontend-pwa
+          pnpm run build
+          pnpm run check
+      - name: Check frontend-manage typescript types
+        if: always()
+        shell: bash
+        run: |
+          cd apps/frontend-manage
+          pnpm run build
+          pnpm run check
+      - name: Check frontend-control typescript types
+        if: always()
+        shell: bash
+        run: |
+          cd apps/frontend-control
+          pnpm run build
+          pnpm run check
+      - name: Check office-addin typescript types
+        if: always()
+        shell: bash
+        run: |
+          cd apps/office-addin
+          pnpm run build
+          pnpm run check
+      - name: Check func-response-processor typescript types
+        if: always()
+        shell: bash
+        run: |
+          cd apps/func-response-processor
+          pnpm run build
+          pnpm run check
+      - name: Check func-incoming-responses typescript types
+        if: always()
+        shell: bash
+        run: |
+          cd apps/func-incoming-responses
+          pnpm run build
           pnpm run check
