--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -2,6 +2,7 @@
   "name": "@klicker-uzh/grading",
   "version": "3.1.0",
   "license": "AGPL-3.0",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -15,7 +16,7 @@
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/jest": "^29.5.3",
-    "@types/node": "^18.17.4",
+    "@types/node": "^20.12.12",
     "@types/ramda": "^0.29.3",
     "cross-env": "7.0.3",
     "eslint": "8.45.0",
@@ -24,8 +25,8 @@
     "prettier-plugin-organize-imports": "3.2.3",
     "size-limit": "8.2.4",
     "ts-jest": "29.1.0",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "tsup": "7.2.0",
+    "typescript": "5.4.5"
   },
   "scripts": {
     "analyze": "size-limit --why",
