--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -2,6 +2,7 @@
   "name": "@klicker-uzh/markdown",
   "version": "3.1.0",
   "license": "AGPL-3.0",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -22,7 +23,7 @@
     "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
-    "@types/node": "^18.17.4",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.14",
@@ -36,8 +37,8 @@
     "size-limit": "8.2.4",
     "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "tsup": "7.2.0",
+    "typescript": "5.4.5"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-svg-core": "6.4.2",
@@ -80,6 +81,5 @@
       "path": "dist/index.js",
       "limit": "10 KB"
     }
-  ],
-  "type": "module"
+  ]
 }
