--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -55,6 +55,7 @@
     "@uzh-bf/design-system": "2.7.0",
     "axios": "1.4.0",
     "cross-env": "7.0.3",
+    "dotenv": "16.0.3",
     "eslint": "8.45.0",
     "ioredis-mock": "8.7.0",
     "jest": "29.5.0",
@@ -86,7 +87,7 @@
     "script:prod": "doppler run --config prd -- bun run"
   },
   "engines": {
-    "node": "=20"
+    "node": "=22"
   },
   "volta": {
     "extends": "../../package.json"
