--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@klicker-uzh/util",
-  "version": "3.1.0-beta.36",
+  "version": "3.1.0",
   "license": "AGPL-3.0",
   "type": "module",
   "main": "dist/index.js",
@@ -43,7 +43,7 @@
     "size": "size-limit"
   },
   "engines": {
-    "node": "=20"
+    "node": "=22"
   },
   "volta": {
     "extends": "../../package.json"
