--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -8,21 +8,24 @@
     "@klicker-uzh/markdown": "workspace:*",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.4",
-    "@types/js-cookie": "^3.0.3",
     "@tailwindcss/typography": "0.5.9",
     "@tsconfig/node18": "^2.0.1",
     "@tsconfig/recommended": "^1.0.2",
+    "@types/js-cookie": "^3.0.3",
+    "@types/lodash": "^4.14.196",
     "@types/node": "^18.17.4",
     "@types/ramda": "^0.29.3",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
+    "lodash": "4.17.21",
     "npm-run-all": "4.1.5",
     "postcss-import": "15.1.0",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
     "prettier-plugin-tailwindcss": "0.4.1",
+    "recharts": "2.7.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
     "typescript": "5.0.4"
@@ -33,6 +36,7 @@
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@uzh-bf/design-system": "2.7.0",
+    "dayjs": "1.11.9",
     "formik": "2.4.3",
     "js-cookie": "3.0.5",
     "localforage": "1.10.0",
@@ -41,8 +45,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "1.14.0",
-    "yup": "1.2.0",
-    "dayjs": "1.11.9"
+    "yup": "1.2.0"
   },
   "scripts": {
     "build": "run-p build:tw:*",
