--- a/.github/workflows/check-types.yml
+++ b/.github/workflows/check-types.yml
@@ -2,9 +2,9 @@ name: Check typescript types
 
 on:
   push:
-    branches: ["v3", "v3*"]
+    branches: ['v3', 'v3*']
   pull_request:
-    branches: ["v3", "v3*"]
+    branches: ['v3', 'v3*']
     types: [opened, synchronize, reopened]
 
 env:
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
         with:
-          version: 8.14.1
+          version: 9.1.3
           run_install: true
       - name: Build all required packages
         run: |
