chore: extend type check

--- a/.github/workflows/check-types.yml
+++ b/.github/workflows/check-types.yml
@@ -42,6 +42,12 @@ jobs:
         run: |
           cd packages/prisma
           pnpm run check
+      - name: Check grading package typescript types
+        if: always() # Run this step even if the previous one fails
+        shell: bash
+        run: |
+          cd packages/grading
+          pnpm run check
       - name: Check graphql package typescript types
         if: always() # Run this step even if the previous one fails
         shell: bash
