--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -21,7 +21,10 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^18.17.4",
     "@types/ramda": "^0.29.3",
+    "@types/turndown": "^5.0.4",
+    "@types/uuid": "^9.0.8",
     "@types/xml-js": "^1.0.0",
+    "@types/xml2js": "^0.4.14",
     "bcryptjs": "2.4.3",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
@@ -40,6 +43,7 @@
     "tsup": "7.2.0",
     "turndown": "7.1.2",
     "typescript": "5.1.6",
+    "uuid": "^9.0.1",
     "uuidv4": "6.2.13",
     "xml2js": "0.6.2"
   },
