prettier format fix

--- a/packages/markdown/tsconfig.json
+++ b/packages/markdown/tsconfig.json
@@ -1,7 +1,5 @@
 {
-  "include": [
-    "**/**/*",
-  ],
+  "include": ["**/**/*"],
   "compilerOptions": {
     "baseUrl": ".",
     "jsx": "react",
@@ -28,10 +26,6 @@
     "composite": false,
     "declarationMap": true,
     /* If your code runs in the DOM: */
-    "lib": [
-      "es2022",
-      "dom",
-      "dom.iterable"
-    ],
+    "lib": ["es2022", "dom", "dom.iterable"]
   }
 }
