--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -1,7 +1,5 @@
 {
-  "include": [
-    "**/**/*",
-  ],
+  "include": ["**/**/*"],
   "compilerOptions": {
     "baseUrl": ".",
     /* Base Options: */
@@ -27,8 +25,6 @@
     "composite": false,
     "declarationMap": true,
     /* If your code doesn't run in the DOM: */
-    "lib": [
-      "es2022"
-    ]
+    "lib": ["es2022"]
   }
 }
