--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -15,6 +15,7 @@
     "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
+    "@types/body-parser": "^1.19.2",
     "@types/node": "^20.12.12",
     "cross-env": "7.0.3",
     "eslint": "8.45.0",
