--- a/apps/backend-docker/tsconfig.json
+++ b/apps/backend-docker/tsconfig.json
@@ -1,4 +1,10 @@
 {
+  "include": [
+    "./**/*"
+  ],
+  "exclude": [
+    "instrumented/"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     /* Base Options: */
