--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -27,5 +27,5 @@
     /* If your code doesn't run in the DOM: */
     "lib": ["es2022"]
   },
-  "exclude": ["src/client", "src/scripts"]
+  "exclude": ["src/client", "src/scripts", "dist"]
 }
