chore: add lib skip to office-addin config

--- a/apps/office-addin/tsconfig.json
+++ b/apps/office-addin/tsconfig.json
@@ -14,7 +14,8 @@
     "sourceMap": true,
     "target": "es5",
     "lib": ["es7", "dom"],
-    "pretty": true
+    "pretty": true,
+    "skipLibCheck": true
   },
   "compileOnSave": false,
   "buildOnSave": false,
