--- a/apps/backend-docker/tsconfig.json
+++ b/apps/backend-docker/tsconfig.json
@@ -1,10 +1,6 @@
 {
-  "include": [
-    "./**/*"
-  ],
-  "exclude": [
-    "instrumented/"
-  ],
+  "include": ["./src/**/*", "./scripts/**/*"],
+  "exclude": ["instrumented/"],
   "compilerOptions": {
     "baseUrl": ".",
     /* Base Options: */
@@ -25,8 +21,6 @@
     "outDir": "dist",
     "sourceMap": true,
     /* If your code doesn't run in the DOM: */
-    "lib": [
-      "es2022"
-    ]
+    "lib": ["es2022"]
   }
 }
