--- a/.github/workflows/v3_klickeruzhprod-responses.yml
+++ b/.github/workflows/v3_klickeruzhprod-responses.yml
@@ -28,7 +28,7 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pnpm dlx turbo prune --scope @klicker-uzh/func-incoming-responses
+          pnpm dlx turbo@1.11.3 prune --scope @klicker-uzh/func-incoming-responses
           pushd out
           echo "node-linker=hoisted" > .npmrc
           pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
