--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -30,6 +30,7 @@
     "md5": "2.3.0",
     "mongodb": "5.7.0",
     "node-schedule": "2.1.1",
+    "nodemailer": "6.9.14",
     "ramda": "0.29.0",
     "uuid": "9.0.0",
     "validator": "13.11.0",
