--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@azure/service-bus": "7.9.0",
     "@azure/storage-blob": "12.15.0",
+    "@faire/mjml-react": "3.3.0",
     "@klicker-uzh/grading": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/util": "workspace:*",
@@ -20,18 +21,22 @@
     "@pothos/plugin-validation": "3.10.0",
     "axios": "1.4.0",
     "bcryptjs": "2.4.3",
+    "classnames": "2.5.1",
     "dayjs": "1.11.9",
     "generate-password": "1.7.0",
     "graphql": "16.7.1",
     "graphql-scalars": "1.22.2",
     "graphql-yoga": "3.9.1",
     "jsonwebtoken": "9.0.1",
+    "mailing-core": "1.1.0",
     "mathjs": "11.9.1",
     "md5": "2.3.0",
     "mongodb": "5.7.0",
     "node-schedule": "2.1.1",
     "nodemailer": "6.9.14",
     "ramda": "0.29.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "uuid": "9.0.0",
     "validator": "13.11.0",
     "zod": "3.21.4"
@@ -58,7 +63,10 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.17.4",
     "@types/node-schedule": "^2.1.0",
+    "@types/nodemailer": "^6.4.15",
     "@types/ramda": "^0.29.3",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.2",
     "@types/validator": "^13.9.0",
     "@types/web-push": "^3.3.2",
@@ -68,6 +76,8 @@
     "graphql-codegen-persisted-query-ids": "0.1.2",
     "ioredis": "5.3.2",
     "jest": "29.5.0",
+    "mailing": "1.1.0",
+    "next": "14.1.0",
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
     "prettier": "2.8.8",
@@ -91,6 +101,7 @@
     "dev": "npm-run-all --parallel dev:graphql dev:ts",
     "dev:test": "pnpm run dev",
     "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch 'src/**.graphql' --watch 'src/**.ts'",
+    "dev:mailing": "mailing --typescript",
     "dev:offline": "pnpm run dev",
     "dev:ts": "cross-env NODE_ENV=development doppler run --config dev -- tsup --watch --dts",
     "format": "prettier --write .",
