--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -22,6 +22,7 @@
     "d3": "7.8.4",
     "dayjs": "1.11.9",
     "deepmerge": "4.3.1",
+    "fast-xml-parser": "4.4.0",
     "formik": "2.4.3",
     "generate-password": "1.7.0",
     "graphql": "16.7.1",
