--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@klicker-uzh/docs",
-  "version": "3.1.1",
+  "version": "3.1.2-rc.0",
   "license": "AGPL-3.0",
   "dependencies": {
     "@docusaurus/core": "3.0.0-alpha.0",
