--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@klicker-uzh/frontend-manage",
-  "version": "3.1.1",
+  "version": "3.1.2-rc.0",
   "license": "AGPL-3.0",
   "dependencies": {
     "@apollo/client": "3.8.3",
