--- a/apps/func-migration-v2-export/package.json
+++ b/apps/func-migration-v2-export/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@klicker-uzh/func-migration-v2-export",
-  "version": "3.1.1",
+  "version": "3.1.2-rc.0",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "files": [
