--- a/apps/office-addin/package.json
+++ b/apps/office-addin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@klicker-uzh/office-addin",
-  "version": "3.1.1",
+  "version": "3.1.2-rc.0",
   "license": "AGPL-3.0",
   "dependencies": {
     "@uzh-bf/design-system": "2.8.0",
