--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -42,9 +42,10 @@
     "size-limit": "8.2.4",
     "ts-node": "10.9.1",
     "tsup": "7.2.0",
+    "tsx": "4.9.1",
     "turndown": "7.1.2",
-    "uuid": "9.0.1",
     "typescript": "5.4.5",
+    "uuid": "9.0.1",
     "uuidv4": "6.2.13",
     "xml2js": "0.6.2"
   },
@@ -80,16 +81,16 @@
     "prisma:studio:prod": "doppler run --config prd -- pnpm run prisma:studio:raw",
     "prisma:studio:qa": "doppler run --config stg -- pnpm run prisma:studio:raw",
     "prisma:studio:raw": "prisma studio --schema=src/prisma/schema.prisma",
-    "script": "ENV=development doppler run --config dev -- bun run",
-    "script:prod": "ENV=production doppler run --config prd -- bun run",
+    "script": "ENV=development doppler run --config dev -- tsx",
+    "script:prod": "ENV=production doppler run --config prd -- tsx",
     "seed": "ENV=development doppler run --config dev -- run-s build seed:test",
-    "seed:achievements": "ENV=development doppler run --config dev bun run src/data/seedAchievements.ts",
-    "seed:prod:achievements": "ENV=production doppler run --config prd -- bun run src/data/seedAchievements.ts",
-    "seed:flashcards": "ENV=development doppler run --config dev bun run src/data/seedFlashcards.ts",
-    "seed:prod:flashcards": "ENV=development doppler run --config prd -- bun run src/data/seedFlashcards.ts",
-    "seed:prod:repetitionPool": "ENV=development doppler run --config prd -- bun run src/data/seedRepetitionPool.ts",
-    "seed:qa": "ENV=development doppler run --config stg -- bun run src/data/seedTEST.ts",
-    "seed:test": "ENV=development bun run src/data/seedTEST.ts",
+    "seed:achievements": "ENV=development doppler run --config dev tsx src/data/seedAchievements.ts",
+    "seed:prod:achievements": "ENV=production doppler run --config prd -- tsx src/data/seedAchievements.ts",
+    "seed:flashcards": "ENV=development doppler run --config dev tsx src/data/seedFlashcards.ts",
+    "seed:prod:flashcards": "ENV=development doppler run --config prd -- tsx src/data/seedFlashcards.ts",
+    "seed:prod:repetitionPool": "ENV=development doppler run --config prd -- tsx src/data/seedRepetitionPool.ts",
+    "seed:qa": "ENV=development doppler run --config stg -- tsx src/data/seedTEST.ts",
+    "seed:test": "ENV=development tsx src/data/seedTEST.ts",
     "size": "size-limit"
   },
   "engines": {
