--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -66,6 +66,7 @@
     "source-map-support": "0.5.21",
     "ts-node": "10.9.1",
     "tsup": "7.2.0",
+    "tsx": "4.9.1",
     "typescript": "5.4.5"
   },
   "scripts": {
@@ -83,8 +84,8 @@
     "format:check": "prettier --check .",
     "start": "node -r dotenv/config dist/index.js",
     "start:test": "nyc --silent node -r dotenv/config dist/index.js",
-    "script": "doppler run --config dev -- bun run",
-    "script:prod": "doppler run --config prd -- bun run"
+    "script": "doppler run --config dev -- tsx",
+    "script:prod": "doppler run --config prd -- tsx"
   },
   "engines": {
     "node": "=20"
